Bug 500404 - Night Light doesn't work on kwin 6.3.1 with "prefer color accuracy" setting in use
Summary: Night Light doesn't work on kwin 6.3.1 with "prefer color accuracy" setting i...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: night color (other bugs)
Version First Reported In: 6.3.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 500526 500617 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-02-19 13:10 UTC by haim.ido
Modified: 2025-03-01 03:49 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description haim.ido 2025-02-19 13:10:50 UTC
SUMMARY
Night Color is not working with kwin 6.3.1.

STEPS TO REPRODUCE
1. Activate night color using settings/tray

OBSERVED RESULT
Night color is not activating, there is no perceptible color shit.

EXPECTED RESULT
Night color activates, shifting the colors on the screen.

SOFTWARE/OS VERSIONS
kinfo:

Operating System: EndeavourOS 
KDE Plasma Version: 6.3.1
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Kernel Version: 6.12.15-1-lts (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 9 7940HS w/ Radeon 780M Graphics
Memory: 14.8 GiB of RAM
Graphics Processor 1: AMD Radeon 780M
Graphics Processor 2: zink Vulkan 1.4


ADDITIONAL INFORMATION
Night light doesn't work when using Built-in or None as color profiles. Using an ICC profile does work but since kwin 6.3 it has been hurting my eyes so I switched to the build-in profile. For now I've simply downgraded to kwin-6.3.0-5 from the pacman cache. This solved the issue night light using the built-in color profile.
Comment 1 haim.ido 2025-02-19 13:20:20 UTC
I haven't noticed the "Color accuracy" option that's been added, it seems that selecting "Prefer efficiency" allows night light to work.
It's only when "Prefer color accuracy" is selected that there are issues.
Comment 2 Bug Janitor Service 2025-02-19 17:09:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7199
Comment 3 Zamundaaa 2025-02-19 17:25:45 UTC
Git commit 7b0433ba640efc8cb29409c32ff26a4343b895c3 by Xaver Hugl.
Committed on 19/02/2025 at 17:08.
Pushed by zamundaaa into branch 'master'.

backends/drm: use a shadow buffer with "prefer color accuracy" if night light is enabled

Otherwise there's no way night light could be applied

M  +4    -2    src/backends/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/7b0433ba640efc8cb29409c32ff26a4343b895c3
Comment 4 Zamundaaa 2025-02-19 17:47:12 UTC
Git commit 7595680ad7b9f10b3cd21b6ad3076da42ce72faf by Xaver Hugl.
Committed on 19/02/2025 at 17:25.
Pushed by zamundaaa into branch 'Plasma/6.3'.

backends/drm: use a shadow buffer with "prefer color accuracy" if night light is enabled

Otherwise there's no way night light could be applied


(cherry picked from commit 7b0433ba640efc8cb29409c32ff26a4343b895c3)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +4    -2    src/backends/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/7595680ad7b9f10b3cd21b6ad3076da42ce72faf
Comment 5 Zamundaaa 2025-02-23 17:47:49 UTC
*** Bug 500617 has been marked as a duplicate of this bug. ***
Comment 6 Zamundaaa 2025-02-23 17:50:26 UTC
*** Bug 500526 has been marked as a duplicate of this bug. ***
Comment 7 Geno 2025-03-01 03:49:58 UTC
I'm on an Arch Linux based system running KDE Plasma 6 in X11.

Since the kwin update to 6.3.2.1-1, Night Light has a stark green/purple hue instead of red/orange. I believe the color accuracy option is not available on X11.