backends/drm: use a shadow buffer with "prefer color accuracy" if night light is enabled

Otherwise there's no way night light could be applied

BUG: 500404


(cherry picked from commit 7b0433ba640efc8cb29409c32ff26a4343b895c3)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>